--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 
 # Runtime data
 pids
@@ -57,3 +56,7 @@ typings/
 # dotenv environment variables file
 .env
 
+# build directory
+app
+
+.idea/
