--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thinkjs-application",
+  "name": "idoujiaoBE",
   "description": "application created by thinkjs",
   "version": "1.0.0",
   "scripts": {
